# light-sentry

./: .env.example  Cargo.toml  README.md  docker-compose.yml
docs/plans/: 2026-03-01-light-sentry-design.md  2026-03-01-light-sentry-implementation.md
migrations/: 001_create_users.sql  002_create_projects.sql  003_create_error_events.sql  004_create_transactions.sql  005_create_logs.sql  006_add_logs_indexes.sql
src/: auth.rs  background.rs  error.rs  main.rs  state.rs
src/ingest/: auth.rs  decompress.rs  envelope.rs  fingerprint.rs  mod.rs  store.rs
src/routes/: auth.rs  issues.rs  logs.rs  mod.rs  performance.rs  projects.rs
templates/: base.html  issue_detail.html  issues.html  login.html  logs.html  performance.html  performance_detail.html  project_new.html  projects.html  register.html
templates/partials/: log_row.html  log_stream.html  project_nav.html
