[package]
name = "light-sentry"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tower-sessions = { version = "0.14" }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
askama = "0.13"
flate2 = "1"
rmcp = { version = "0.17", features = ["server", "transport-io", "schemars"] }
schemars = { version = "1.0", features = ["chrono04", "uuid1"] }

[[bin]]
name = "light-sentry"
path = "src/main.rs"

[[bin]]
name = "light-sentry-mcp"
path = "src/bin/mcp.rs"
